# ai-workshop

./: .gitignore  README.md
sessions/01_intro_workshop/: README.md
sessions/01_intro_workshop/code/.flox/: env.json
sessions/01_intro_workshop/code/backend/: cf_aiproxy.py  config.py  requirements.txt
sessions/01_intro_workshop/code/backend/routes/: api_routes.py
sessions/01_intro_workshop/code/frontend/src/app/: page.tsx
sessions/02_human_in_the_loop/: README.md
sessions/03_flox_rethinking_dev_envs/: README.md
sessions/03_python_js_dilemma/: README.md
sessions/04_ecommerce_vectors/: README.md
sessions/05_chunking_strategies/: README.md
sessions/06_low_latency_llms/: README.md
sessions/06_low_latency_llms/crews/researchers/: pyproject.toml
sessions/06_low_latency_llms/crews/xmas-tree/: README.md  pyproject.toml
sessions/06_low_latency_llms/crews/xmas-tree/src/xmastree/: crew.py  main.py
sessions/06_low_latency_llms/crews/xmas-tree/src/xmastree/config/: agents.yaml  tasks.yaml
sessions/07_production_genai/: README.md
sessions/08_interactive_envs/: README.md  README.md.orig
sessions/09_chatbot_llms/: README.md  solutions.md
slides/: README.md
