[project]
name = "xmastree"
version = "0.1.0"
description = "xmastree using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
xmastree = "xmastree.main:run"
run_crew = "xmastree.main:run"
train = "xmastree.main:train"
replay = "xmastree.main:replay"
test = "xmastree.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
